feat: 完成我的域名操作
