# docs/swagger.json
@@ -229,6 +229,176 @@
                         }
                     }
                 }
+            },
+            "post": {
+                "description": "创建记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "domain/record"
+                ],
+                "summary": "创建记录",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/domain.CreateRecordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/domain.CreateRecordResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            }
+        },
+        "/domain/{id}/record/{recordID}": {
+            "put": {
+                "description": "更新记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "domain/record"
+                ],
+                "summary": "更新记录",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "recordID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/domain.UpdateRecordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/domain.UpdateRecordResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "删除记录",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "domain/record"
+                ],
+                "summary": "删除记录",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "name": "recordID",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/domain.DeleteRecordRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "properties": {
+                                "code": {
+                                    "type": "integer"
+                                },
+                                "data": {
+                                    "$ref": "#/definitions/domain.DeleteRecordResponse"
+                                },
+                                "msg": {
+                                    "type": "string"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/BadRequest"
+                        }
+                    }
+                }
             }
         },
         "/provider": {
@@ -669,6 +839,79 @@
                 }
             }
         },
+        "dns.Extra": {
+            "type": "object",
+            "properties": {
+                "default": {
+                    "type": "any"
+                },
+                "field_type": {
+                    "$ref": "#/definitions/dns.FieldType"
+                },
+                "key": {
+                    "type": "string"
+                },
+                "options": {
+                    "description": "选项，只有FieldTypeSelect时有效",
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "dns.FieldType": {
+            "description": "FieldType enum type:\n- FieldTypeText: text\n- FieldTypeNumber: number\n- FieldTypeSwitch: switch\n- FieldTypeSelect: select",
+            "type": "string",
+            "enum": [
+                "text",
+                "number",
+                "switch",
+                "select"
+            ]
+        },
+        "dns.Record": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "description": "额外字段，各个平台的特殊字段，例如dnspod支持线路、cloudflare支持代理",
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "any"
+                    }
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "ttl": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/dns.RecordType"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "dns.RecordType": {
+            "description": "RecordType enum type:\n- A: A\n- AAAA: AAAA\n- CNAME: CNAME\n- TXT: TXT\n- MX: MX\n- NS: NS",
+            "type": "string",
+            "enum": [
+                "A",
+                "AAAA",
+                "CNAME",
+                "TXT",
+                "MX",
+                "NS"
+            ]
+        },
         "domain.AddRequest": {
             "type": "object",
             "properties": {
@@ -684,6 +927,38 @@
             }
         },
         "domain.AddResponse": {
+            "type": "object"
+        },
+        "domain.CreateRecordRequest": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "any"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "ttl": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/dns.RecordType"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.CreateRecordResponse": {
+            "type": "object"
+        },
+        "domain.DeleteRecordRequest": {
+            "type": "object"
+        },
+        "domain.DeleteRecordResponse": {
             "type": "object"
         },
         "domain.DeleteRequest": {
@@ -753,6 +1028,46 @@
             }
         },
         "domain.RecordListResponse": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dns.Extra"
+                    }
+                },
+                "list": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/dns.Record"
+                    }
+                }
+            }
+        },
+        "domain.UpdateRecordRequest": {
+            "type": "object",
+            "properties": {
+                "extra": {
+                    "type": "object",
+                    "additionalProperties": {
+                        "type": "any"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "ttl": {
+                    "type": "integer"
+                },
+                "type": {
+                    "$ref": "#/definitions/dns.RecordType"
+                },
+                "value": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.UpdateRecordResponse": {
             "type": "object"
         },
         "httputils.PageRequest": {
